[package]
name = "gocat"
version = "0.1.0"
authors = ["Hong Zhang <mahone08@gmail.com>"]
edition = "2021"
description = "A terminal SGF (Smart Game Format) viewer and editor"
license = "GPL-3.0-only"
repository = "https://github.com/hzhang08/gocat"

[dependencies]
regex = "1.10.4"
ratatui = "0.26"
crossterm = "0.27"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
